# rateradar

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  NIGHT-REPORT.md  README.md  codemagic.yaml  package.json  pnpm-lock.yaml
services/data-pipeline/: Dockerfile  fly.toml  pyproject.toml  railway.json  requirements.txt
services/data-pipeline/snapshots/ecb/: latest.json  series.json
services/data-pipeline/snapshots/ecb/history/: 2026-05-14T10-11-23Z.json  2026-05-14T10-15-57Z.json  2026-05-14T19-45-06Z.json  2026-05-14T23-04-38Z.json  2026-05-15T19-28-24Z.json  2026-05-15T23-02-57Z.json  2026-05-18T19-44-17Z.json  2026-05-18T23-12-40Z.json  2026-05-19T19-52-10Z.json  2026-05-19T23-12-35Z.json  2026-05-20T20-13-51Z.json  2026-05-20T23-20-06Z.json  2026-05-21T13-27-26Z.json  2026-05-21T19-52-51Z.json  2026-05-21T23-10-11Z.json  2026-05-22T19-43-45Z.json  (+90 more)
services/data-pipeline/snapshots/fed/: latest.json  series.json
services/data-pipeline/src/: diff_engine.py  ecb_fetcher.py  fed_fetcher.py  json_writer.py  main.py  probability_calc.py  supabase_writer.py
services/data-pipeline/src/calendars/: ecb_2026.yaml  fed_2026.yaml  fed_2027.yaml
services/data-pipeline/src/fetchers/: __init__.py  base.py  ecb_estr_source.py  ecb_mock_source.py  mock_source.py  yfinance_source.py
services/data-pipeline/tests/: test_diff_engine.py  test_ecb_estr_source.py  test_ecb_fetcher.py  test_fed_fetcher.py  test_json_writer.py  test_main_current_rate.py  test_main_db_resilience.py  test_main_snapshot_guard.py  test_probability_calc.py  test_supabase_writer.py
(+408 files in other folders)
