[project]
name = "rateradar-pipeline"
version = "0.1.0"
description = "Data pipeline for RateRadar — fetches futures prices, computes Fed/ECB decision probabilities, writes snapshots to Supabase"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["S101"]  # allow `assert` in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
